# R-Type

./: .gitignore  CMakeLists.txt  ClientGlue  HOWTO.cpp  Makefile  TODO  copliator  index.html  list.txt
GenRType/: main.cpp
SFML-1.6/Temp/ftp/Debug/: ResolveAssemblyReference.cache
SFML-1.6/Temp/opengl/Debug/: ResolveAssemblyReference.cache
SFML-1.6/Temp/pong/Debug/: ResolveAssemblyReference.cache
SFML-1.6/lib/vc2008/: sfml-audio-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
cmake_modules/: FindSFML.cmake
doc/: rfc.txt  rfc.txt.txt
doc/class/: Makefile.template  koala.cls
doc/doc/: Makefile  R-Type.tex
doc/features/: Makefile  R-Type_Features.tex
include/: AMonsterMovement.hpp  AObject.hpp  AnnimBigExplosion.hpp  AnnimCircleExplosion.hpp  AnnimExplosion.hpp  AnnimLittleExplosion.hpp  AnnimTest.hpp  AudioUtils.hpp  Bullet.hpp  BulletMovement.hpp  Button.hpp  Client.hpp  ClientNetwork.hpp  ClientPacketManager.hpp  CondVarUnix.hpp  DefineExportMonster.hpp  DirectoryManagerUnix.hpp  DlLoader.hpp  Dll.hpp  EGraphicAction.hpp  Entities.hpp  ExtensionDll.hpp  ExtensionSo.hpp  Game.hpp  GameManager.hpp  GameNetwork.hpp  GameParameter.hpp  GraphicClientState.hpp  GraphicUtils.hpp  HighScore.hpp  IAnnim.hpp  IClientProtocolAction.hpp  ICondVar.hpp  IDirectoryManager.hpp  IGraphic.hpp  IProtocolAction.hpp  IThreadData.hpp  ITimer.hpp  InfoGame.hpp  Istate.hpp  (+62 more)
lib/: Makefile  note.txt
lib/SNetwork/include/: ATCPClientSocket.h  ATCPServerSocket.h  AUDPServerSocket.h  ISelector.h  ISocket.h  Selector.hpp  TCPClientSocketUnix.h  TCPClientSocketWindows.h  TCPServerSocketUnix.h  TCPServerSocketWindows.h  UDPClientSocketUnix.h  UDPClientSocketWindows.h  UDPServerSocketUnix.h  UDPServerSocketWindows.h
lib/SNetwork/src/: AUDPServerSocket.cpp  TCPClientSocketUnix.cpp  TCPClientSocketWindows.cpp  TCPServerSocketUnix.cpp  TCPServerSocketWindows.cpp  UDPClientSocketUnix.cpp  UDPClientSocketWindows.cpp  UDPServerSocketUnix.cpp  UDPServerSocketWindows.cpp
lib/Test/: mainthreadtp.cpp
lib/Thread/include/: CondVarWindows.hpp  IThread.hpp  MutexUnix.hpp  MutexWindows.hpp  ThreadUnix.hpp  ThreadWindows.hpp
lib/Thread/src/: CondVarWindows.cpp  MutexUnix.cpp  MutexWindows.cpp  ThreadUnix.cpp  ThreadWindows.cpp
ressources/: .ressources_images  .ressources_sounds  .save
ressources/map/: Star.map  Sun.map
sfml_first/: DirectoryManagerWindows.cpp  Igraphic.hpp  Makefile  MyMusic.cpp  Sfml.cpp  Sfml.hpp
sfml_first/include/: DirectoryManagerWindows.hpp  Dll.hpp  Error.hpp  GraphicClientState.hpp  GraphicUtils.hpp  IExtension.hpp  IGraphic.hpp  MyMusic.hpp  MySound.hpp  OS.hpp  OSUnix.hpp  OSWindows.hpp  Sfml.hpp
sfml_first/ressources/: .ressources_fonts  .ressources_images  .ressources_musics
sfml_first/src/: Button.cpp  DirectoryManagerUnix.cpp  DlLoader.cpp  Dll.cpp  Error.cpp  ExtensionSo.cpp  GraphicClientState.cpp  MyMusic.cpp  MySound.cpp  Sfml.cpp  main.cpp
shared/: MonsterBase.cpp  MonsterBase.hpp  MonsterCrab.cpp  MonsterEye.cpp  MonsterRobot.cpp  MonsterShip.cpp
src/client/: AMonsterMovement.cpp  AnnimBigExplosion.cpp  AnnimCircleExplosion.cpp  AnnimLittleExplosion.cpp  AnnimTest.cpp  BulletMovement.cpp  Client.cpp  ClientNetwork.cpp  ClientNetwork.hpp  ExtensionDll.cpp  GraphicClientState.cpp  InfoGame.cpp  MyMusic.cpp  MySound.cpp  PlayerMovement.cpp  RedEvil.cpp  Sfml.cpp  StateCreateGame.cpp  StateCredits  StateCredits.cpp  StateGameParameters.cpp  StateInGame.cpp  StateIntro.cpp  StateJoinCreate.cpp  StateOptions.cpp  StateRanking.cpp  StateRoom.cpp  StateRoomList.cpp  StateStart.cpp  main.cpp
src/client/protocol/: ClientPacketManager.cpp  PacketData.cpp  PacketManager.cpp
src/client/protocol/actions/: ProtocolGame.cpp  ProtocolGame.hpp  ProtocolGameDetails.cpp  ProtocolGameDetails.hpp  ProtocolLobby.cpp  ProtocolLobby.hpp  ProtocolMovement.cpp  ProtocolMovement.hpp
src/protocol/: PacketAggregator.cpp  PacketData.cpp  PacketData.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketManager.cpp  PacketManager.hpp  ProtocolPacketData.cpp  ProtocolPacketData.hpp  iProtocolAction.hpp
src/protocol/actions/: ProtocolGame.cpp  ProtocolGame.hpp  ProtocolGameDetails.cpp  ProtocolGameDetails.hpp  ProtocolLobby.cpp  ProtocolLobby.hpp  ProtocolMap.cpp  ProtocolMap.hpp  ProtocolMovement.cpp  ProtocolMovement.hpp  ProtocolPosition.cpp  ProtocolPosition.hpp
src/r-type/: main.cpp  r-type.cpp
src/r-type_server/: CondVarUnix.cpp  Dll.cpp  GameManager.cpp  Mutex.cpp  PacketAggregator.cpp  SafeQueue.cpp  Server.cpp  Thread.cpp  ThreadData.cpp  ThreadPool.cpp  User.cpp  main.cpp  r-type_server.cpp
src/server/: AObject.cpp  Bullet.cpp  DirectoryManagerUnix.cpp  DirectoryManagerWindows.cpp  DlLoader.cpp  Dll.cpp  Entities.cpp  ExtensionDll.cpp  Game.cpp  GameManager.cpp  HighScore.cpp  Monster.cpp  PacketAggregator.cpp  PacketTask.cpp  Player.cpp  Position.cpp  RecupMap.cpp  SafeQueue.cpp  Server.cpp  TaskManager.cpp  TaskNetwork.cpp  ThreadData.cpp  ThreadPool.cpp  Tile.cpp  TimerUnix.cpp  TimerWindows.cpp  User.cpp  main.cpp  timer.c
src/server/protocol/: PacketManager.cpp
src/server/protocol/actions/: ProtocolGame.cpp  ProtocolGame.hpp  ProtocolGameDetails.cpp  ProtocolGameDetails.hpp  ProtocolLobby.cpp  ProtocolLobby.hpp  ProtocolMovement.cpp  ProtocolMovement.hpp
src/user/: User.cpp  User.hpp  UserSocket.cpp  UserSocket.hpp
